objects/Pre_study__c.object
<CustomObject>
    <fields>
        <fullName>Access_right_high_level_data_flow_etc__c</fullName>
        <label>Access right, high level data flow, etc…</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Objective_and_KPI__c</fullName>
        <label>Business Objective and KPI</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_study</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Funding_entity__c</fullName>
        <label>Cost &amp; Funding entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_policies__c</fullName>
        <label>Data policies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_support_process_SLA__c</fullName>
        <label>End User support process &amp; SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ideator_Requestor__c</fullName>
        <label>Ideator/Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_global_process__c</fullName>
        <label>Main global process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Accounts &amp; Contacts</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Application_Owner_SE_Employee__c</fullName>
        <label>Name of Application Owner (SE  Employee)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Vendor__c</fullName>
        <label>Name of Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_object_s_used_by_the_App__c</fullName>
        <label>Name of object(s) used by the App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Application__c</fullName>
        <label>Name of the Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_impacted_applications__c</fullName>
        <label>Other impacted applications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_impacted_processes__c</fullName>
        <label>Other impacted processes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Accounts &amp; Contacts</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_key_points__c</fullName>
        <label>Other key points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_study_Status__c</fullName>
        <label>Pre-study Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet reviewed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Pre-study</relationshipLabel>
        <relationshipName>Pre_study</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_or_Country__c</fullName>
        <label>Region or Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_User_Go_live_date__c</fullName>
        <label>Requested User Go-live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer_s_comment__c</fullName>
        <label>Reviewer&apos;s comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SE_IT_security_rules__c</fullName>
        <label>SE IT security rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Infrastructure_policies__c</fullName>
        <label>SE Infrastructure policies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_architecture_standards__c</fullName>
        <label>SE architecture standards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_data_privacy_rules__c</fullName>
        <label>SE data privacy rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_network__c</fullName>
        <label>SE network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_In_Out__c</fullName>
        <label>Scope In &amp; Out</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Server_location_Application_hosted_in__c</fullName>
        <label>Server location / Application hosted in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SE Local Hosting</fullName>
                </value>
                <value>
                    <fullName>SE Data Center</fullName>
                </value>
                <value>
                    <fullName>SE Virtual Private Cloud</fullName>
                </value>
                <value>
                    <fullName>External - SaaS</fullName>
                </value>
                <value>
                    <fullName>External - IaaS/PaaS/BaaS/MBaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_delivery_support__c</fullName>
        <label>Service delivery &amp; support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_s_role_number_of_users__c</fullName>
        <label>User&apos;s role &amp; number of users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pre-study</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Main_global_process__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pre_study_Status__c</columns>
        <columns>Ideator_Requestor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Pre-study ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-study</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>